# rust-single-template

./: Cargo.toml  LICENSE.md  README.md  _typos.toml
