[package]
name = "{{crate_name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/wangxinyang/"
homepage = "https://github.com/wangxinyang/"
description = """
readme = "README.md"
categories = ["development-tools"]
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
